# visor-sueldos-publicos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  release-please-config.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: data-sync.yml  dependabot-auto-merge.yml  python-app.yml  release-please.yml
.streamlit/: config.toml
docs/: api-analysis-camara.md  api-analysis-senate.md
scripts/: run_diputados_extractor.py  run_senado_extractor.py
src/audits/: audit_utils.py
src/core/: api_client.py  config.py  logger.py  queries.py
src/etl/: diputados_processor.py  diputados_scraper.py  ingest.py  senado_processor.py  senado_scraper.py  sync.py
src/public_salary_monitor/: audit_utils.py  salary_analysis.py
src/ui/: views.py
tests/: test_duckdb.py  test_integration.py
