[project]
name = "visor-sueldos-publicos"
version = "0.4.0"
description = "Visor de Sueldos Públicos"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb",
    "openpyxl",
    "pandas",
    "plotly",
    "requests",
    "streamlit",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/public_salary_monitor"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
