[project]
name = "visor-sueldos-publicos"
version = "0.8.0"
description = "Visor de Sueldos Públicos"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb",
    "openpyxl",
    "pandas",
    "plotly",
    "pyarrow>=21.0.0",
    "requests",
    "streamlit",
    "tenacity>=9.1.2",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audits"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.10",
]
